--- a/css/media.css
+++ b/css/media.css
@@ -9,7 +9,7 @@
     margin-left: auto;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu,
   .contacts {
     display: none;
@@ -23,12 +23,17 @@
     line-height: 0;
   }
   .mobile-menu {
+    padding-top: 80px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /* max-height: 796px; */
+    max-height: 796px;
     z-index: 1000;
     background-color: #ffffff;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -59,9 +64,6 @@
   }
   .mobile-menu-container {
     position: relative;
-    padding-top: 80px;
-    padding-bottom: 40px;
-    padding-left: 40px;
   }
   .menu-chapter {
     height: 100%;
