--- a/css/styles.css
+++ b/css/styles.css
@@ -184,26 +184,66 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero.img/office.jpg);
+    url(../images/hero.img/office-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 1);
 }
-/* url('../images/hero/hero-phone.jpg'); */
 
-/* @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url('../images/hero/hero-phone@2x.jpg');
+      url('../images/hero.img/office-mobile@2x.jpg');
   }
-} */
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero.img/office-tablet.jpg');
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero.img/office-tablet@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero.img/office-desktop.jpg');
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1158px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero.img/office-desktop@2x.jpg');
+  }
+}
 
 .hero-title {
   color: var(--white-color);
@@ -598,8 +638,7 @@ img {
 .buttons-list {
   margin-bottom: 72px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 24px;
 }
 
@@ -928,7 +967,6 @@ img {
   margin-bottom: 16px;
   background-color: #2e2f42;
   border: 1px solid #ffffff;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   /* margin-right: 24px; */
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1061,31 +1099,15 @@ img {
 }
 
 @media screen and (max-width: 427px) {
+  .buttons-list {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
   .tel {
     font-size: 25px;
   }
 }
-/* @media screen and (min-width: 429px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url('../images/hero/hero-tablet.jpg');
-  }
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url('../images/hero/hero-tablet@2x.jpg');
-    }
-  }
-} */
 @media screen and (min-width: 428px) {
   .container {
     width: 428px;
@@ -1188,27 +1210,7 @@ img {
     display: none;
   }
 }
-/* @media screen and (min-width: 769px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url('../images/hero/hero.jpg');
-  }
-}
 
-@media (min-device-pixel-ratio: 2) and (min-width: 769px),
-  (min-resolution: 192dpi) and (min-width: 769px),
-  (min-resolution: 2dppx) and (min-width: 769px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url('../images/hero/hero@2x.jpg');
-  }
-} */
 @media screen and (min-width: 1157px) {
   .works {
     display: block;
