--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ img {
 
 .hero {
   max-width: 1440px;
-  padding: 188px 0;
+  padding: 112px 0;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
@@ -278,14 +278,12 @@ img {
   background: var(--accent-color);
 }
 
-.about-item:not(:last-child) {
-  max-width: 396px;
-  margin: 0 auto;
-  margin-bottom: 72px;
-}
-
 .icons-place-hero {
   display: none;
+}
+
+.about {
+  padding: 96px 0;
 }
 
 .about-title {
@@ -407,8 +405,8 @@ img {
 }
 
 /* CUSTOMERS */
-.our-customers {
-  padding-top: 120px;
+.cust {
+  padding: 96px 16px;
 }
 .customers {
   display: flex;
@@ -417,7 +415,7 @@ img {
 }
 
 .border-icon-cust {
-  width: 168px;
+  width: 190px;
   height: 88px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -465,17 +463,12 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.our-customers {
-  padding-bottom: 120px;
-}
 
 .customers.list {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-between; */
   color: #8e8f99;
   gap: 72px 16px;
-
   justify-content: center;
 }
 
@@ -532,8 +525,6 @@ img {
 .footer {
   padding: 100px 0;
   text-align: center;
-  align-items: center;
-
   background-color: var(--main-color);
 }
 
@@ -546,7 +537,7 @@ img {
   width: 268px;
   margin: 0 auto;
   text-align: start;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 .footer.container {
   display: block;
@@ -567,9 +558,9 @@ img {
   flex-direction: column;
 }
 
-.footer-social {
-  margin-bottom: 72px;
-}
+/* .footer-social { */
+/* margin-bottom: 72px; */
+/* } */
 
 .footer-title {
   color: var(--white-color);
@@ -954,9 +945,9 @@ img {
   background-color: var(--accent-color);
 }
 
-.form-footer {
-  margin-left: auto;
-}
+/* .form-footer { */
+/* margin-left: auto; */
+/* } */
 .input-footer {
   outline: transparent;
   color: white;
@@ -1118,6 +1109,21 @@ img {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .about-item:not(:last-child) {
+    max-width: 396px;
+    margin: 0 auto;
+    margin-bottom: 72px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer-text {
+    margin-bottom: 72px;
+  }
+  .footer-social {
+    margin-bottom: 72px;
+  }
+}
 @media screen and (width: 768px) {
   .customers-link {
     max-width: 168px;
@@ -1157,7 +1163,7 @@ img {
   .about-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
   }
   .about-item {
     flex-basis: calc((100% - 24px) / 2);
@@ -1175,22 +1181,33 @@ img {
     margin-bottom: 0;
     margin: 0;
   }
-  .footer-text {
-    margin-bottom: 0;
+  .border-icon-cust {
+    width: 168px;
   }
+  .cust {
+    padding: 96px 16px;
+  }
+  .customers.list {
+    gap: 72px 24px;
+  }
+  /* .footer-text { */
+  /* margin-bottom: 0; */
+  /* } */
   .footer .container {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 108px;
+    justify-content: flex-start;
+    gap: 72px 24px;
+    /* padding: 0 108px; */
   }
   .footer-info {
     text-align: left;
-    margin-right: 24px;
-    margin-bottom: 72px;
+    /* margin-right: 24px;
+    margin-bottom: 72px; */
   }
-  .footer-social {
-    margin-right: 0;
-  }
+  /* .footer-social { */
+  /* margin-right: 0; */
+  /* } */
   .footer-title {
     font-weight: 500;
     text-align: start;
@@ -1230,24 +1247,26 @@ img {
   .contacts {
     display: flex;
     gap: 40px;
-    margin-left: 0 auto;
+    margin: 0 auto;
     flex-direction: row;
   }
-  .contacts-link.link {
-    padding: 24px;
-  }
+
   .hero {
     padding: 188px 0;
   }
+  .about {
+    padding: 120px 0;
+  }
   .about-list {
     flex-wrap: nowrap;
+    gap: 24px;
   }
   .about-item:not(:last-child) {
     margin-bottom: 0;
   }
-  .about-item {
+  /* .about-item {
     flex-basis: calc((100% - 72px) / 4);
-  }
+  } */
   .icons-place-hero {
     display: block;
     background-color: #f4f4fd;
@@ -1279,6 +1298,9 @@ img {
   .team-item {
     flex-basis: calc((100% - 72px) / 4);
   }
+  .cust {
+    padding: 120px 15px;
+  }
   .customers.list {
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -1296,20 +1318,21 @@ img {
   .footer .nav-logo {
     color: #f4f4fd;
     display: inline-block;
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
     padding: 0;
   }
   .footer .container {
     display: flex;
-    padding: 0;
+    justify-content: space-between;
+    /* padding: 0; */
   }
-  .footer-info {
-    margin-right: 120px;
-  }
-  .footer-social {
-    margin-bottom: 0;
-    margin-right: 79px;
-  }
+  /* .footer-info { */
+  /* margin-right: 120px;
+  } */
+  /* .footer-social { */
+  /* margin-bottom: 0;
+    margin-right: 79px; */
+  /* } */
   .footer-title {
     font-weight: 400;
   }
